UI updated, Google  Sheets connected

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <h1>Hi, I'm <span>Sakibul Islam</span></h1>
-                <p>Competitive Programmer</p>
+                <h1>Hi, I am <span>Sakibul Islam</span></h1><br>
+                <p>Competitive Programmer & </p>
+                <p>Software Engineer Undergrad</p>
                 <!-- <div class="wrapper">
                     <ul class="dynamic_text">
                     <li><span>Programmer</span></li>
@@ -51,7 +52,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Currently studying Software Engineering. Passionate for analytical thinking and problem solving</p>
+                    <p>I love to code and solve problems. Like to travel and explore.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab(event, 'skills')">Skills</p>
@@ -60,23 +61,23 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
-                            <li><span>Web Development</span><br>Web app Development</li>
-                            <li><span>App Development</span><br>Building Android/iOS apps</li>
+                            <li><span>C/C++</span><br>Algorithms & Data Structure</li>
+                            <li><span>Java</span><br>OOP and GUI frameworks</li>
+                            <li><span>SQL</span><br>Database Query</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2021 - Current</span><br>Competitive Programming</li>
-                            <li><span>2021 - 2022</span><br>lorem</li>
-                            <li><span>2021 - 2023</span><br>lorem</li>
+                            <li><span>App Development</span><br>Android apps with Java</li>
+                            <li><span>Git</span><br>Version Control System</li>
+                            <li><span>Database</span><br>Firebase & MySQL</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2021 - Current</span><br>Undergraduate</li>
-                            <li><span>2020 - 2023</span><br>SUST</li>
-                            <li><span>2021 - 2022</span><br>lorem</li>
+                            <li><span>2020 - Current</span><br>B.Sc in Software Engineering</li>
+                            <li><span>2019</span><br>HSC - GPA 5.0</li>
+                            <li><span>2017</span><br>SSC - GPA 5.0</li>
                         </ul>
                     </div>
                 </div>
@@ -87,25 +88,25 @@
 <!-- ---projects--- -->
 <div id="projects">
     <div class="container">
-        <h1 class="sub-title">My Projects</h1>
+        <h1 class="sub-title">Projects</h1>
         <div class="projects-list">
             <div>
                 <i class="fa-solid fa-gamepad"></i>
                 <h2>Connect Four</h2>
                 <p>Board Game played by 2 person or against computer.<br><br>Tools: C, MinMax</p>
-                <a href="https://github.com/Sakib62/SWE150_Game_Development_In_C"><h3><u>See More</u></h3></a>
+                <a href="https://github.com/Sakib62/SWE150_Game_Development_In_C" target="_blank"><h3><u>See More</u></h3></a>
             </div>
             <div>
                 <i class="fa-sharp fa-solid fa-table-tennis-paddle-ball"></i>
                 <h2>Ping Pong Game</h2>
                 <p>2d Table Tennis game.<br><br>Tools: Java Swing</p>
-                <a href="https://github.com/Sakib62/SWE224_OOP_Lab_GameProject"><h3><u>See More</u></h3></a>
+                <a href="https://github.com/Sakib62/SWE224_OOP_Lab_GameProject" target="_blank"><h3><u>See More</u></h3></a>
             </div>
             <div>
                 <i class="fa-brands fa-android"></i>
                 <h2>Library Management App</h2>
-                <p>Lending and tracking books and fees via apps.<br><br>Tools: Java, Firebase</p>
-                <a href="https://github.com/Sakib62/SWE250_Android_App_Development"><h3><u>See More</u></h3></a>
+                <p>Lending and tracking books and fees via apps.<br><br>Tools: Java, Firebase, Android Studio</p>
+                <a href="https://github.com/Sakib62/SWE250_Android_App_Development" target="_blank"><h3><u>See More</u></h3></a>
             </div>
         </div>
     </div>
@@ -115,36 +116,36 @@
 
 <div id="Achievements">
     <div class="container">
-        <h1 class="sub-title">My Achievement</h1>
+        <h1 class="sub-title">Achievement</h1>
         <div class="achievement-list">
+            <div class="achievement">
+                <img src="images/work-3.jpeg">
+                <div class="layer">
+                    <h3>Top 50</h3>
+                    <p>Brain Craft Intra SUST Programming Contest 2023</p>
+                    <a href="https://facebook.com/events/s/brain-craft-intra-sust-program/1617978455288843/" target="_blank"><i class="fa-sharp fa-solid fa-calendar-days fa-beat" style="color: #eb300f;"></i></a>
+                </div>
+            </div>
             <div class="achievement">
                 <img src="images/work-1.png">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>This app will beat facebook.</p>
-                    <a href="#"><i class="fa-regular fa-arrow-up-right-from-square"></i></a>
+                    <h3>PUPIL</h3>
+                    <p>MAX Rating "1293" on Codeforces</p>
+                    <a href="https://codeforces.com/profile/Sakib62" target="_blank"><i class="fa-sharp fa-solid fa-code fa-beat" style="color: #eb300f;"></i></a>
                 </div>
             </div>
             <div class="achievement">
                 <img src="images/work-2.png">
                 <div class="layer">
-                    <h3>Music App</h3>
-                    <p>This app will beat spotify.</p>
-                    <a href="#"><i class="fa-regular fa-arrow-up-right-from-square"></i></a>
-                </div>
-            </div>
-            <div class="achievement">
-                <img src="images/work-3.png">
-                <div class="layer">
-                    <h3>Online Shopping App</h3>
-                    <p>This app will beat shopify.</p>
-                    <a href="#"><i class="fa-regular fa-arrow-up-right-from-square"></i></a>
+                    <h3>1100+ problems solved</h3>
+                    <p>across all programming platforms.</p>
+                    <a href="https://stopstalk.com/user/profile/Sakib_62" target="_blank"><i class="fa-sharp fa-solid fa-code fa-beat" style="color: #eb300f;"></i></a>
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <!-- <a href="#" class="btn">See more</a> -->
     </div>
-</div>
+</div><br><br>
 
 <!-- --contact---- -->
 <div id="contact">
@@ -152,29 +153,27 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-sharp fa-solid fa-paper-plane"></i>contact@example.com</p>
-                <p><i class="fa-sharp fa-solid fa-phone"></i>0123456789</p>
+                <p><i class="fa-sharp fa-solid fa-paper-plane"></i>sakib62.coder@gmail.com</p>
                 <div class="social-icons">
-                    <a href="fb.com/supersakib62"><i class="fab fa-facebook"></i></a>
-                    <a href="https://twitter.com/supersakib62"><i class="fab fa-twitter"></i></a>
-                    <a href=""><i class="fab fa-instagram"></i></a>
-                    <a href="https://bd.linkedin.com/in/sakib-ul-islam"><i class="fab fa-linkedin"></i></a>
-                    <a href=""><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://twitter.com/supersakib62" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/supersakib62/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://bd.linkedin.com/in/sakib-ul-islam" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/my-cv.pdf" download class="btn btn2">CV</a>
             </div>
             <div class="contact-right">
-                <form>
-                    <input type="text" name="Name" placeholder="Your Name" required>
-                    <input type="email" name="Email" placeholder="Your Email" required>
-                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                    <button type="submit" class="btn btn2">Submit</button>
+                <form name="submit-to-google-sheet">
+                    <input type="text" name="Name" placeholder="Name" required>
+                    <input type="email" name="Email" placeholder="Email" required>
+                    <textarea name="Message" rows="6" placeholder="Message"></textarea>
+                    <button type="submit" class="btn btn2">Send</button>
                 </form>
+                <span id="msg"></span>
             </div>
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright © Sakib. Made with <i class="fa-solid fa-heart"></i> by Sakib</p>
+        <p>Made with <i class="fa-solid fa-heart"></i> by Sakib</p>
     </div>
 </div>
 
