added top-to-page button

--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fa-sharp fa-solid fa-paper-plane"></i>sakib62.coder@gmail.com</p>
                 <div class="social-icons">
+                    <a href="https://bd.linkedin.com/in/sakib-ul-islam" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/sakib62" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://twitter.com/supersakib62" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/supersakib62/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://bd.linkedin.com/in/sakib-ul-islam" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2">CV</a>
             </div>
@@ -177,6 +178,9 @@
     </div>
 </div>
 
+<div id="scroll-to-top-btn">
+    <i class="fas fa-arrow-up"></i>
+</div>
 
     <script src="index.js"></script>
 </body>
